y.output
   0  $accept : start $end

   1  identifier : IDENTIFIER

   2  primary_expression : identifier
   3                     | constant
   4                     | string
   5                     | '(' expression ')'

   6  constant : CONSTANT

   7  string : STRING_LITERAL

   8  postfix_expression : primary_expression
   9                     | postfix_expression '[' expression ']'
  10                     | postfix_expression '(' ')'
  11                     | postfix_expression '(' argument_expression_list ')'
  12                     | postfix_expression '.' identifier
  13                     | postfix_expression PTR_OP identifier
  14                     | postfix_expression INC_OP
  15                     | postfix_expression DEC_OP
  16                     | '(' type_name ')' '{' initializer_list '}'
  17                     | '(' type_name ')' '{' initializer_list ',' '}'

  18  argument_expression_list : assignment_expression
  19                           | argument_expression_list ',' assignment_expression

  20  unary_expression : postfix_expression
  21                   | INC_OP unary_expression
  22                   | DEC_OP unary_expression
  23                   | unary_operator cast_expression
  24                   | SIZEOF unary_expression
  25                   | SIZEOF '(' type_name ')'

  26  unary_operator : '&'
  27                 | '*'
  28                 | '+'
  29                 | '-'
  30                 | '~'
  31                 | '!'

  32  cast_expression : unary_expression
  33                  | '(' type_name ')' cast_expression

  34  multiplicative_expression : cast_expression
  35                            | multiplicative_expression '*' cast_expression
  36                            | multiplicative_expression '/' cast_expression
  37                            | multiplicative_expression '%' cast_expression

  38  additive_expression : multiplicative_expression
  39                      | additive_expression '+' multiplicative_expression
  40                      | additive_expression '-' multiplicative_expression

  41  shift_expression : additive_expression
  42                   | shift_expression LEFT_OP additive_expression
  43                   | shift_expression RIGHT_OP additive_expression

  44  relational_expression : shift_expression
  45                        | relational_expression '<' shift_expression
  46                        | relational_expression '>' shift_expression
  47                        | relational_expression LE_OP shift_expression
  48                        | relational_expression GE_OP shift_expression

  49  equality_expression : relational_expression
  50                      | equality_expression EQ_OP relational_expression
  51                      | equality_expression NE_OP relational_expression

  52  and_expression : equality_expression
  53                 | and_expression '&' equality_expression

  54  exclusive_or_expression : and_expression
  55                          | exclusive_or_expression '^' and_expression

  56  inclusive_or_expression : exclusive_or_expression
  57                          | inclusive_or_expression '|' exclusive_or_expression

  58  logical_and_expression : inclusive_or_expression
  59                         | logical_and_expression AND_OP inclusive_or_expression

  60  logical_or_expression : logical_and_expression
  61                        | logical_or_expression OR_OP logical_and_expression

  62  conditional_expression : logical_or_expression
  63                         | logical_or_expression '?' expression ':' conditional_expression

  64  assignment_expression : conditional_expression
  65                        | unary_expression assignment_operator assignment_expression

  66  assignment_operator : '='
  67                      | MUL_ASSIGN
  68                      | DIV_ASSIGN
  69                      | MOD_ASSIGN
  70                      | ADD_ASSIGN
  71                      | SUB_ASSIGN
  72                      | LEFT_ASSIGN
  73                      | RIGHT_ASSIGN
  74                      | AND_ASSIGN
  75                      | XOR_ASSIGN
  76                      | OR_ASSIGN

  77  expression : assignment_expression
  78             | expression ',' assignment_expression

  79  constant_expression : conditional_expression

  80  $$1 :

  81  declaration : declaration_specifiers ';' $$1
  82              | declaration_specifiers init_declarator_list ';'

  83  declaration_specifiers : storage_class_specifier declaration_specifiers
  84                         | storage_class_specifier
  85                         | type_specifier declaration_specifiers
  86                         | type_specifier
  87                         | type_qualifier declaration_specifiers
  88                         | type_qualifier

  89  init_declarator_list : init_declarator
  90                       | init_declarator_list ',' init_declarator

  91  init_declarator : declarator '=' initializer
  92                  | declarator

  93  storage_class_specifier : EXTERN
  94                          | STATIC

  95  type_specifier : VOID
  96                 | CHAR
  97                 | INT
  98                 | LONG
  99                 | FLOAT
 100                 | DOUBLE
 101                 | SIGNED
 102                 | UNSIGNED
 103                 | BOOL

 104  specifier_qualifier_list : type_specifier specifier_qualifier_list
 105                           | type_specifier
 106                           | type_qualifier specifier_qualifier_list
 107                           | type_qualifier

 108  type_qualifier : CONST
 109                 | VOLATILE

 110  declarator : pointer direct_declarator
 111             | direct_declarator

 112  direct_declarator : identifier
 113                    | '(' declarator ')'
 114                    | direct_declarator '[' ']'
 115                    | direct_declarator '[' '*' ']'
 116                    | direct_declarator '[' assignment_expression ']'
 117                    | direct_declarator '(' parameter_type_list ')'
 118                    | direct_declarator '(' ')'
 119                    | direct_declarator '(' identifier_list ')'

 120  pointer : '*' type_qualifier_list pointer
 121          | '*' type_qualifier_list
 122          | '*' pointer
 123          | '*'

 124  type_qualifier_list : type_qualifier
 125                      | type_qualifier_list type_qualifier

 126  parameter_type_list : parameter_list

 127  parameter_list : parameter_declaration
 128                 | parameter_list ',' parameter_declaration

 129  parameter_declaration : declaration_specifiers declarator
 130                        | declaration_specifiers abstract_declarator
 131                        | declaration_specifiers

 132  identifier_list : identifier
 133                  | identifier_list ',' identifier

 134  type_name : specifier_qualifier_list abstract_declarator
 135            | specifier_qualifier_list

 136  abstract_declarator : pointer direct_abstract_declarator
 137                      | pointer
 138                      | direct_abstract_declarator

 139  direct_abstract_declarator : '(' abstract_declarator ')'
 140                             | '[' ']'
 141                             | '[' '*' ']'
 142                             | '[' STATIC type_qualifier_list assignment_expression ']'
 143                             | '[' STATIC assignment_expression ']'
 144                             | '[' type_qualifier_list STATIC assignment_expression ']'
 145                             | '[' type_qualifier_list assignment_expression ']'
 146                             | '[' type_qualifier_list ']'
 147                             | '[' assignment_expression ']'
 148                             | direct_abstract_declarator '[' ']'
 149                             | direct_abstract_declarator '[' '*' ']'
 150                             | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 151                             | direct_abstract_declarator '[' STATIC assignment_expression ']'
 152                             | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
 153                             | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 154                             | direct_abstract_declarator '[' type_qualifier_list ']'
 155                             | direct_abstract_declarator '[' assignment_expression ']'
 156                             | '(' ')'
 157                             | '(' parameter_type_list ')'
 158                             | direct_abstract_declarator '(' ')'
 159                             | direct_abstract_declarator '(' parameter_type_list ')'

 160  initializer : '{' initializer_list '}'
 161              | '{' initializer_list ',' '}'
 162              | assignment_expression

 163  initializer_list : designation initializer
 164                   | initializer
 165                   | initializer_list ',' designation initializer
 166                   | initializer_list ',' initializer

 167  designation : designator_list '='

 168  designator_list : designator
 169                  | designator_list designator

 170  designator : '[' constant_expression ']'
 171             | '.' identifier

 172  statement : labeled_statement
 173            | compound_statement
 174            | expression_statement
 175            | selection_statement
 176            | iteration_statement
 177            | jump_statement

 178  labeled_statement : identifier ':' statement

 179  compound_statement : '{' '}'
 180                     | '{' block_item_list '}'

 181  block_item_list : block_item
 182                  | block_item_list block_item

 183  block_item : declaration
 184             | statement

 185  expression_statement : ';'
 186                       | expression ';'

 187  selection_statement : IF '(' expression ')' statement ELSE statement
 188                      | IF '(' expression ')' statement

 189  iteration_statement : WHILE '(' expression ')' statement
 190                      | FOR '(' expression_statement expression_statement ')' statement
 191                      | FOR '(' expression_statement expression_statement expression ')' statement
 192                      | FOR '(' declaration expression_statement ')' statement
 193                      | FOR '(' declaration expression_statement expression ')' statement

 194  jump_statement : CONTINUE ';'
 195                 | BREAK ';'
 196                 | RETURN ';'
 197                 | RETURN expression ';'

 198  start : translation_unit

 199  translation_unit : external_declaration
 200                   | translation_unit external_declaration

 201  external_declaration : function_definition
 202                       | declaration

 203  function_definition : declaration_specifiers declarator declaration_list compound_statement
 204                      | declaration_specifiers declarator compound_statement

 205  declaration_list : declaration
 206                   | declaration_list declaration

state 0
	$accept : . start $end  (0)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	.  error

	start  goto 14
	declaration  goto 15
	declaration_specifiers  goto 16
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19
	translation_unit  goto 20
	external_declaration  goto 21
	function_definition  goto 22


state 1
	type_qualifier : CONST .  (108)

	.  reduce 108


state 2
	storage_class_specifier : EXTERN .  (93)

	.  reduce 93


state 3
	storage_class_specifier : STATIC .  (94)

	.  reduce 94


state 4
	type_qualifier : VOLATILE .  (109)

	.  reduce 109


state 5
	type_specifier : UNSIGNED .  (102)

	.  reduce 102


state 6
	type_specifier : SIGNED .  (101)

	.  reduce 101


state 7
	type_specifier : CHAR .  (96)

	.  reduce 96


state 8
	type_specifier : INT .  (97)

	.  reduce 97


state 9
	type_specifier : LONG .  (98)

	.  reduce 98


state 10
	type_specifier : DOUBLE .  (100)

	.  reduce 100


state 11
	type_specifier : FLOAT .  (99)

	.  reduce 99


state 12
	type_specifier : VOID .  (95)

	.  reduce 95


state 13
	type_specifier : BOOL .  (103)

	.  reduce 103


state 14
	$accept : start . $end  (0)

	$end  accept


state 15
	external_declaration : declaration .  (202)

	.  reduce 202


state 16
	declaration : declaration_specifiers . ';' $$1  (81)
	declaration : declaration_specifiers . init_declarator_list ';'  (82)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (203)
	function_definition : declaration_specifiers . declarator compound_statement  (204)

	IDENTIFIER  shift 23
	'('  shift 24
	'*'  shift 25
	';'  shift 26
	.  error

	identifier  goto 27
	init_declarator_list  goto 28
	init_declarator  goto 29
	declarator  goto 30
	pointer  goto 31
	direct_declarator  goto 32


state 17
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (83)
	declaration_specifiers : storage_class_specifier .  (84)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	IDENTIFIER  reduce 84
	'('  reduce 84
	')'  reduce 84
	'['  reduce 84
	','  reduce 84
	'*'  reduce 84
	';'  reduce 84

	declaration_specifiers  goto 33
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19


state 18
	declaration_specifiers : type_specifier . declaration_specifiers  (85)
	declaration_specifiers : type_specifier .  (86)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	IDENTIFIER  reduce 86
	'('  reduce 86
	')'  reduce 86
	'['  reduce 86
	','  reduce 86
	'*'  reduce 86
	';'  reduce 86

	declaration_specifiers  goto 34
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19


state 19
	declaration_specifiers : type_qualifier . declaration_specifiers  (87)
	declaration_specifiers : type_qualifier .  (88)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	IDENTIFIER  reduce 88
	'('  reduce 88
	')'  reduce 88
	'['  reduce 88
	','  reduce 88
	'*'  reduce 88
	';'  reduce 88

	declaration_specifiers  goto 35
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19


state 20
	start : translation_unit .  (198)
	translation_unit : translation_unit . external_declaration  (200)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	$end  reduce 198

	declaration  goto 15
	declaration_specifiers  goto 16
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19
	external_declaration  goto 36
	function_definition  goto 22


state 21
	translation_unit : external_declaration .  (199)

	.  reduce 199


state 22
	external_declaration : function_definition .  (201)

	.  reduce 201


state 23
	identifier : IDENTIFIER .  (1)

	.  reduce 1


state 24
	direct_declarator : '(' . declarator ')'  (113)

	IDENTIFIER  shift 23
	'('  shift 24
	'*'  shift 25
	.  error

	identifier  goto 27
	declarator  goto 37
	pointer  goto 31
	direct_declarator  goto 32


state 25
	pointer : '*' . type_qualifier_list pointer  (120)
	pointer : '*' . type_qualifier_list  (121)
	pointer : '*' . pointer  (122)
	pointer : '*' .  (123)

	CONST  shift 1
	VOLATILE  shift 4
	'*'  shift 25
	IDENTIFIER  reduce 123
	'('  reduce 123
	')'  reduce 123
	'['  reduce 123
	','  reduce 123

	type_qualifier  goto 38
	pointer  goto 39
	type_qualifier_list  goto 40


state 26
	declaration : declaration_specifiers ';' . $$1  (81)
	$$1 : .  (80)

	.  reduce 80

	$$1  goto 41


state 27
	direct_declarator : identifier .  (112)

	.  reduce 112


state 28
	declaration : declaration_specifiers init_declarator_list . ';'  (82)
	init_declarator_list : init_declarator_list . ',' init_declarator  (90)

	','  shift 42
	';'  shift 43
	.  error


state 29
	init_declarator_list : init_declarator .  (89)

	.  reduce 89


state 30
	init_declarator : declarator . '=' initializer  (91)
	init_declarator : declarator .  (92)
	function_definition : declaration_specifiers declarator . declaration_list compound_statement  (203)
	function_definition : declaration_specifiers declarator . compound_statement  (204)

	CONST  shift 1
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	'{'  shift 44
	'='  shift 45
	','  reduce 92
	';'  reduce 92

	declaration  goto 46
	declaration_specifiers  goto 47
	storage_class_specifier  goto 17
	type_specifier  goto 18
	type_qualifier  goto 19
	compound_statement  goto 48
	declaration_list  goto 49


state 31
	declarator : pointer . direct_declarator  (110)

	IDENTIFIER  shift 23
	'('  shift 24
	.  error

	identifier  goto 27
	direct_declarator  goto 50


state 32
	declarator : direct_declarator .  (111)
	direct_declarator : direct_declarator . '[' ']'  (114)
	direct_declarator : direct_declarator . '[' '*' ']'  (115)
	direct_declarator : direct_declarator . '[' assignment_expression ']'  (116)
	direct_declarator : direct_declarator . '(' parameter_type_list ')'  (117)
	direct_declarator : direct_declarator . '(' ')'  (118)
	direct_declarator : direct_declarator . '(' identifier_list ')'  (119)

	'('  shift 51
	'['  shift 52
	CONST  reduce 111
	EXTERN  reduce 111
	STATIC  reduce 111
	VOLATILE  reduce 111
	UNSIGNED  reduce 111
	SIGNED  reduce 111
	CHAR  reduce 111
	INT  reduce 111
	LONG  reduce 111
	DOUBLE  reduce 111
	FLOAT  reduce 111
	VOID  reduce 111
	BOOL  reduce 111
	')'  reduce 111
	'{'  reduce 111
	','  reduce 111
	'='  reduce 111
	';'  reduce 111


state 33
	declaration_specifiers : storage_class_specifier declaration_specifiers .  (83)

	.  reduce 83


state 34
	declaration_specifiers : type_specifier declaration_specifiers .  (85)

	.  reduce 85


state 35
	declaration_specifiers : type_qualifier declaration_specifiers .  (87)

	.  reduce 87


state 36
	translation_unit : translation_unit external_declaration .  (200)

	.  reduce 200


state 37
	direct_declarator : '(' declarator . ')'  (113)

	')'  shift 53
	.  error


state 38
	type_qualifier_list : type_qualifier .  (124)

	.  reduce 124


state 39
	pointer : '*' pointer .  (122)

	.  reduce 122


state 40
	pointer : '*' type_qualifier_list . pointer  (120)
	pointer : '*' type_qualifier_list .  (121)
	type_qualifier_list : type_qualifier_list . type_qualifier  (125)

	CONST  shift 1
	VOLATILE  shift 4
	'*'  shift 25
	IDENTIFIER  reduce 121
	'('  reduce 121
	')'  reduce 121
	'['  reduce 121
	','  reduce 121

	type_qualifier  goto 54
	pointer  goto 55


state 41
	declaration : declaration_specifiers ';' $$1 .  (81)

	.  reduce 81


state 42
	init_declarator_list : init_declarator_list ',' . init_declarator  (90)

	IDENTIFIER  shift 23
	'('  shift 24
	'*'  shift 25
	.  error

	identifier  goto 27
	init_declarator  goto 56
	declarator  goto 57
	pointer  goto 31
	direct_declarator  goto 32


state 43
	declaration : declaration_specifiers init_declarator_list ';' .  (82)

	.  reduce 82


state 44
	compound_statement : '{' . '}'  (179)
	compound_statement : '{' . block_item_list '}'  (180)

	RETURN  shift 58
	CONST  shift 1
	CONSTANT  shift 59
	EXTERN  shift 2
	STATIC  shift 3
	VOLATILE  shift 4
	CONTINUE  shift 60
	BREAK  shift 61
	IF  shift 62
	FOR  shift 63
	WHILE  shift 64
	SIZEOF  shift 65
	UNSIGNED  shift 5
	SIGNED  shift 6
	CHAR  shift 7
	INT  shift 8
	LONG  shift 9
	DOUBLE  shift 10
	FLOAT  shift 11
	VOID  shift 12
	BOOL  shift 13
	IDENTIFIER  shift 23
	INC_OP  shift 66
	DEC_OP  shift 67
	STRING_LITERAL  shift 68
	'('  shift 69
	'{'  shift 44
	'}'  shift 70
	'&'  shift 71
	'*'  shift 72
	'+'  shift 73
	'-'  shift 74
	'~'  shift 75
	'!'  shift 76
	';'  shift 77
	.  error
